--- a/thesis.tex
+++ b/thesis.tex
@@ -157,7 +157,9 @@ Prague 2015
 \openright
 
 \noindent
-Dedication.
+First of all, I would like to thank my supervisor, Mgr. Ing. Filip Jurčíček Ph.D., for his guidance, invaluable advices and time he has invested in me.
+Also, I would like to thank my colleagues Ing. Lukáš Žilka, Mgr. Ondřej Plátek and Mgr. Ondřej Dušek for their valuable insights.
+Finally, I would like to thank all of my family for their support during my studies.
 
 Access to computing and storage facilities owned by parties and projects contributing to the National Grid Infrastructure MetaCentrum,
   provided under the programme "Projects of Large Infrastructure for Research, Development, and Innovations" (LM2010005), is greatly appreciated.
