--- a/citations.bib
+++ b/citations.bib
@@ -248,3 +248,87 @@
   year={1997},
   publisher={MIT press}
 }
+
+@article{lippmann1989review,
+  title={Review of neural networks for speech recognition},
+  author={Lippmann, Richard P},
+  journal={Neural computation},
+  volume={1},
+  number={1},
+  pages={1--38},
+  year={1989},
+  publisher={MIT Press}
+}
+
+@article{rabiner1981isolated,
+  title={Isolated and connected word recognition--Theory and selected applications},
+  author={Rabiner, Lawrence and Levinson, Stephen E},
+  journal={Communications, IEEE Transactions on},
+  volume={29},
+  number={5},
+  pages={621--659},
+  year={1981},
+  publisher={IEEE}
+}
+
+@article{forney1973viterbi,
+  title={The viterbi algorithm},
+  author={Forney Jr, G David},
+  journal={Proceedings of the IEEE},
+  volume={61},
+  number={3},
+  pages={268--278},
+  year={1973},
+  publisher={IEEE}
+}
+
+@article{dempster1977maximum,
+  title={Maximum likelihood from incomplete data via the EM algorithm},
+  author={Dempster, Arthur P and Laird, Nan M and Rubin, Donald B},
+  journal={Journal of the royal statistical society. Series B (methodological)},
+  pages={1--38},
+  year={1977},
+  publisher={JSTOR}
+}
+
+@incollection{rodriguez2003comparative,
+  title={Comparative study of the baum-welch and viterbi training algorithms applied to read and spontaneous speech recognition},
+  author={Rodr{\'\i}guez, Luis Javier and Torres, In{\'e}s},
+  booktitle={Pattern Recognition and Image Analysis},
+  pages={847--857},
+  year={2003},
+  publisher={Springer}
+}
+
+@inproceedings{ryant2013speech,
+  title={Speech activity detection on youtube using deep neural networks.},
+  author={Ryant, Neville and Liberman, Mark and Yuan, Jiahong},
+  booktitle={INTERSPEECH},
+  pages={728--731},
+  year={2013}
+}
+
+@article{mesgarani2006discrimination,
+  title={Discrimination of speech from nonspeech based on multiscale spectro-temporal modulations},
+  author={Mesgarani, Nima and Slaney, Malcolm and Shamma, Shihab A},
+  journal={Audio, Speech, and Language Processing, IEEE Transactions on},
+  volume={14},
+  number={3},
+  pages={920--930},
+  year={2006},
+  publisher={IEEE}
+}
+
+@inproceedings{ng2012developing,
+  title={Developing a Speech Activity Detection System for the DARPA RATS Program.},
+  author={Ng, Tim and Zhang, Bing and Nguyen, Long and Matsoukas, Spyros and Zhou, Xinhui and Mesgarani, Nima and Vesel{\`y}, Karel and Matejka, Pavel},
+  booktitle={INTERSPEECH},
+  year={2012}
+}
+
+@inproceedings{jang2002optimization,
+  title={Optimization of Viterbi beam search in speech recognition},
+  author={Jang, Jyh-Shing Roger and Lin, Shiuan-Sung},
+  booktitle={International Symposium on Chinese Spoken Language Processing},
+  year={2002}
+}
